--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -4,3 +4,8 @@
 #
 # For more details, please check https://github.com/bazelbuild/bazel/issues/18958
 ###############################################################################
+#module(name = "your_project_name")
+
+bazel_dep(name = "bazel_skylib", version = "1.8.2") # Check BCR for lat
+bazel_dep(name = "rules_cc", version = "0.2.9")
+bazel_dep(name = "catch2", version = "3.11.0")
