--- a/adventofcode2025/day2/BUILD.bazel
+++ b/adventofcode2025/day2/BUILD.bazel
@@ -9,6 +9,7 @@ cc_binary(
 cc_test(
     name = "day2test",
     srcs = ["code.hpp", "code.cpp", "code.test.cpp"],
-    deps = ["@catch2//:catch2", "@catch2//:catch2_main"]
+    deps = ["@catch2//:catch2", "@catch2//:catch2_main"],
+    copts = ["-std=c++23"]
     # Add visibility if needed, e.g., visibility = ["//test:__subpackages__"]
 )
